@@ -1,3 +1,9 @@
+Wed Jun 30 02:37:30 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>
+
+	* thread_pthread.c (get_stack): use pthread_getthrds_np() for AIX.
+
+	* configure.in: ditto.
+
 Wed Jun 23 21:17:32 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/raddrinfo.c (ruby_getaddrinfo__darwin): new workaround for
